fix: ApplicationCard box-shadow, My Applications panel spacing

--- a/src/app.css
+++ b/src/app.css
@@ -207,7 +207,7 @@ body {
 .bg-applicationcard {
   border-radius: 25px;
   background: rgba(249, 249, 249, 0.20);
-  box-shadow: 0 0 35.6px 4px rgba(0, 102, 146, 0.10);
+  box-shadow: 0 0 16px 2px #0066921a;
   position: relative;
 }
 
